# maplelink

./: .gitignore  .prettierrc  LICENSE  README.en.md  README.md  debug.html  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
installer/: webview2報錯看這.txt
src/: App.tsx  main.tsx  (+1 more)
src-tauri/: Cargo.toml  audit.toml  build.rs  tauri.conf.json5
src-tauri/capabilities/: default.json  recaptcha.json
src-tauri/icons/: icon.icns
src-tauri/resources/lr/: LRConfig.xml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: account.rs  auth.rs  config.rs  launcher.rs  mod.rs  system.rs  update.rs
src-tauri/src/core/: auth.rs  config_parser.rs  error.rs  game_intercept.rs  game_launcher.rs  mod.rs
src-tauri/src/models/: app_state.rs  config.rs  error.rs  game_account.rs  mod.rs  session.rs  session_state.rs  update.rs
src-tauri/src/services/: account_storage.rs  announcement_service.rs  autopaste_service.rs  beanfun_service.rs  cafe_service.rs  classic_service.rs  config_service.rs  cookie_native.rs  data_transfer.rs  exe_rename_service.rs  game_download.rs  game_env_service.rs  game_launch_service.rs  log_service.rs  lr_service.rs  mod.rs  network_service.rs  process_service.rs  recaptcha_window.rs  session_key_fallback.rs  update_service.rs  web_launch.rs  web_popup_service.rs  webview_login.rs  webview_util.rs
src-tauri/src/utils/: crypto.rs  dpapi.rs  mod.rs  shell_open.rs
src-tauri/tests/: config_malformed.rs  config_roundtrip.rs  error_mapping.rs  fs_error_path.rs  no_credentials_on_disk.rs
(+59 files in other folders)
