[package]
name = "maplelink"
version = "0.2.5"
edition = "2021"
description = "Third-party launcher for Beanfun games"
authors = ["MapleLink"]
license = "MIT"

[dependencies]
tauri = { version = "2", features = ["config-json5"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
cookie_store = "0.21"
cookie = "0.18"
sha2 = "0.10"
des = "0.8"
regex = "1"
url = "2"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
rolling-file = "0.2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
base64 = "0.22.1"
open = "5.3.3"
urlencoding = "2.1.3"
rand = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_Security_Cryptography",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

webview2-com = "0.38"
windows-core = "0.61"

[build-dependencies]
tauri-build = { version = "2", features = ["config-json5"] }

[dev-dependencies]
proptest = "1"

[lib]
name = "maplelink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "maplelink"
path = "src/main.rs"
